--- a/style.css
+++ b/style.css
@@ -224,4 +224,11 @@ header {
     margin: auto;
   }
 }
-
+.navbar.scrolled {
+  background: rgba(255, 255, 255, 0.3); /* semi-transparent */
+  backdrop-filter: blur(10px); /* glass blur effect */
+  -webkit-backdrop-filter: blur(10px); /* for Safari */
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  color:#fff; 
+}
